correction footer : scroll annulé + écriture noir + police ajouté

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <title>accueil</title>
   </head>
   <body>
@@ -21,11 +22,11 @@
                 <a href="PolitiqueDeConfidentialite" target="_blank">Politique de confidentialité</a>
               </div>
               <div class="s-m">
-                <a href="" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.facebook.com/benroc.photographe" target="_blank"><i class="fab fa-facebook-f"></i></a>
               </div>
               <div class="info">
                 <p>06.99.59.75.02 - benoit.roc@gmail.com</p>
-                <p>Tous droits Réservé - 2019 -</p>
+                <p>Tous droits Réservé - 2019</p>
               </div>
             </div>
           </footer>
