Header + suppression flèche
Intégration du header dans la grille + suppression de la flèche en attendant

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   </head>
   <body>
       <div class="container">
-          <div>
-            <a href="#" title="Haut de page" class="scrollup"><i class="fa fa-arrow-up"></i></a>
+          <div class="header">BENOIT ROCHER</div>
+          <div class="nav">
+            <a>Photos d'arts</a>
+            <a>Prestations</a>
+            <a>Contact</a>
           </div>
           
           <footer>
