--- a/index.html
+++ b/index.html
@@ -1,35 +1,129 @@
 <!DOCTYPE html>
+
 <html>
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-    <title>accueil</title>
+    <title>Benoit Rocher - Accueil</title>
   </head>
+
   <body>
+
+    <header>
+
+      <div class="header">
+      <h1 class="titre">BR</h1>
+
+      <div class="nav">
+        <div class="button">
+        <a>Accueil</a>
+        </div>
+        <br>
+        <div class="button">
+        <a>Photos</a>
+        </div>
+        <br>
+        <div class="button">
+        <a>Prestations</a>
+        </div>
+        <br>
+        <div class="button">
+        <a>Contact</a>
+        </div>
+      </div>
+
+    </header>
+
+      </header>
+
       <div class="container">
-          <div class="header">BENOIT ROCHER</div>
-          <div class="nav">
-            <a>Photos d'arts</a>
-            <a>Prestations</a>
-            <a>Contact</a>
-          </div>
-          <footer>
-            <div class="detail">
-              <div class="mention">
-                <a href="mentionsLegales.html" target="_blank">Mentions légales</a>
-              </div>
-              <div class="s-m">
-                <a href="https://www.facebook.com/benroc.photographe" target="_blank"><i class="fab fa-facebook-f"></i></a>
-              </div>
-              <div class="info">
-                <p>06.99.59.75.02 - benoit.roc@gmail.com</p>
-                <p>Tous droits Réservé - 2019</p>
-              </div>
+      
+          <!-- Slider -->
+
+          <div id="slider" onmouseout="slider.launchInterval()" onmouseover="slider.pause()">
+
+            <div class="slide" style="background-image: url(img/1.jpg)">
+              <h2 class="slider-title">BENOIT ROCHER</h2>
+              <a class="en-savoir-plus" href="http://benroc.com/albums/">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</a>
             </div>
-          </footer>
+
+            <div class="slide" style="background-image: url(img/2.jpg)">
+              <h2 class="slider-title">BENOIT ROCHER</h2>
+              <a class="en-savoir-plus" href="http://benroc.com/albums/">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</a>
+            </div>
+
+            <div class="slide" style="background-image: url(img/3.jpg)">
+              <h2 class="slider-title">BENOIT ROCHER</h2>
+              <a class="en-savoir-plus" href="http://benroc.com/albums/">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</a>
+            </div>
+
+            <div class="slide" style="background-image: url(img/4.jpg)">
+              <h2 class="slider-title">BENOIT ROCHER</h2>
+              <a class="en-savoir-plus" href="http://benroc.com/albums/">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</a>
+            </div>
+
+            <div class="slide" style="background-image: url(img/5.jpg)">
+              <h2 class="slider-title">BENOIT ROCHER</h2>
+              <a class="en-savoir-plus" href="http://benroc.com/albums/">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</a>
+            </div>
+
+            <div class="slide" style="background-image: url(img/6.jpg)">
+              <h2 class="slider-title">BENOIT ROCHER</h2>
+              <a class="en-savoir-plus" href="http://benroc.com/albums/">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</a>
+            </div>
+
+            <div class="slide" style="background-image: url(img/7.jpg)">
+              <h2 class="slider-title">BENOIT ROCHER</h2>
+              <a class="en-savoir-plus" href="http://benroc.com/albums/">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</a>
+            </div>
+
+            <div class="slide" style="background-image: url(img/8.jpg)">
+              <h2 class="slider-title">BENOIT ROCHER</h2>
+              <a class="en-savoir-plus" href="http://benroc.com/albums/">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</a>
+            </div>
+
+              <a href="#" class="fleche fleche-gauche" onclick="slider.slidePrecedent()">&lt;</a>
+              <a href="#" class="fleche fleche-droite" onclick="slider.slideSuivant()">&gt;</a>
+
+        </div>
+  
+        <script src="js/jquery-3.3.1.min.js" ></script>
+        <script type="text/javascript" src="js/sliderpoo.js"></script>
+
+        <div class="description">
+          <h3 class="titre-desc"></h3>
+          <p class="para1">sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
+            sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
+            sssssssssssssssssssssssssssssssssssssssssssssssssss
+          </p>
+          <p class="para2">
+            ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
+            ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
+            ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
+          </p>
+        </div>
+
+
+        <footer>
+          <div class="detail">
+
+            <div class="info">
+              <p>06.99.59.75.02 - benoit.roc@gmail.com - facebook.com/benroc.photographe</p>
+              <p>Tous droits Réservé - 2019</p>
+            </div>
+    
+            <div class="mention">
+              <a href="mentionsLegales.html" target="_blank">Mentions légales</a>
+            </div>
+
+          </div>
+
+        </footer>
+
       </div>
   
   </body>
