lien cliquable + flèche

--- a/index.html
+++ b/index.html
@@ -5,40 +5,28 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <title>Benoit Rocher - Accueil</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body>
 
     <header>
+      <h1 class="titre">
+        <p>Ben Roc</p>
+      </h1>
 
-      <div class="header">
-      <h1 class="titre">BR</h1>
-
-      <div class="nav">
-        <div class="button">
-        <a>Accueil</a>
-        </div>
+      <nav>
+        <a href="index.html">Accueil</a>
         <br>
-        <div class="button">
-        <a>Photos</a>
-        </div>
+        <a href="photo.html">Photos</a>
         <br>
-        <div class="button">
-        <a>Prestations</a>
-        </div>
+        <a href="prestations.html">Prestations</a>
         <br>
-        <div class="button">
-        <a>Contact</a>
-        </div>
-      </div>
-
+        <a href="contact.html">Contact</a>
+      </nav>
     </header>
-
-      </header>
 
       <div class="container">
       
@@ -90,9 +78,10 @@
               <a href="#" class="fleche fleche-droite" onclick="slider.slideSuivant()">&gt;</a>
 
         </div>
-  
-        <script src="js/jquery-3.3.1.min.js" ></script>
-        <script type="text/javascript" src="js/sliderpoo.js"></script>
+
+        <div class="arrow">
+          <img class="rond" src="circle.svg">
+        </div>
 
         <div class="description">
           <h3 class="titre-desc"></h3>
@@ -112,7 +101,7 @@
           <div class="detail">
 
             <div class="info">
-              <p>06.99.59.75.02 - benoit.roc@gmail.com - facebook.com/benroc.photographe</p>
+              <p>06.99.59.75.02 - benoit.roc@gmail.com - <a href="https://www.facebook.com/benroc.photographe" target="_blank">facebook</a></p>
               <p>Tous droits Réservé - 2019</p>
             </div>
     
@@ -125,6 +114,9 @@
         </footer>
 
       </div>
-  
+
+      <script src="js/jquery-3.3.1.min.js"></script>
+      <script type="text/javascript" src="js/sliderpoo.js"></script>
+
   </body>
 </html>
