Click bouton accueil

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
   <body>
 
     <header>
+
       <h1 class="titre">
-        <p>Ben Roc</p>
+        <div class="logo">
+        <a href="index.html">Ben Roc</a>
+      </div>
       </h1>
 
       <nav>
