--- a/index.html
+++ b/index.html
@@ -80,20 +80,24 @@
         </div>
 
         <div class="arrow">
-          <img class="rond" src="circle.svg">
+          <img class="rond" src="fleche.png">
         </div>
 
         <div class="description">
-          <h3 class="titre-desc"></h3>
-          <p class="para1">sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
+          <div class="titre-desc">
+          <h3>benroc</h3>
+          </div>
+          <div class="para1"><p>
             sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
+            ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
             sssssssssssssssssssssssssssssssssssssssssssssssssss
-          </p>
-          <p class="para2">
+          </p></div>
+
+          <div class="para2"><p>
             ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
             ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
             ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
-          </p>
+          </p></div>
         </div>
 
 
