Fix description/remove element click

--- a/index.html
+++ b/index.html
@@ -39,42 +39,42 @@
 
             <div class="slide" style="background-image: url(img/1.jpg)">
               <h2 class="slider-title">BENOIT ROCHER</h2>
-              <a class="en-savoir-plus" href="http://benroc.com/albums/">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</a>
+              <p class="en-savoir-plus">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</p>
             </div>
 
             <div class="slide" style="background-image: url(img/2.jpg)">
               <h2 class="slider-title">BENOIT ROCHER</h2>
-              <a class="en-savoir-plus" href="http://benroc.com/albums/">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</a>
+              <p class="en-savoir-plus">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</p>
             </div>
 
             <div class="slide" style="background-image: url(img/3.jpg)">
               <h2 class="slider-title">BENOIT ROCHER</h2>
-              <a class="en-savoir-plus" href="http://benroc.com/albums/">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</a>
+              <p class="en-savoir-plus">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</p>
             </div>
 
             <div class="slide" style="background-image: url(img/4.jpg)">
               <h2 class="slider-title">BENOIT ROCHER</h2>
-              <a class="en-savoir-plus" href="http://benroc.com/albums/">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</a>
+              <p class="en-savoir-plus">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</p>
             </div>
 
             <div class="slide" style="background-image: url(img/5.jpg)">
               <h2 class="slider-title">BENOIT ROCHER</h2>
-              <a class="en-savoir-plus" href="http://benroc.com/albums/">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</a>
+              <p class="en-savoir-plus">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</p>
             </div>
 
             <div class="slide" style="background-image: url(img/6.jpg)">
               <h2 class="slider-title">BENOIT ROCHER</h2>
-              <a class="en-savoir-plus" href="http://benroc.com/albums/">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</a>
+              <p class="en-savoir-plus">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</p>
             </div>
 
             <div class="slide" style="background-image: url(img/7.jpg)">
               <h2 class="slider-title">BENOIT ROCHER</h2>
-              <a class="en-savoir-plus" href="http://benroc.com/albums/">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</a>
+              <p class="en-savoir-plus">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</p>
             </div>
 
             <div class="slide" style="background-image: url(img/8.jpg)">
               <h2 class="slider-title">BENOIT ROCHER</h2>
-              <a class="en-savoir-plus" href="http://benroc.com/albums/">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</a>
+              <p class="en-savoir-plus">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</p>
             </div>
 
               <a href="#" class="fleche fleche-gauche" onclick="slider.slidePrecedent()">&lt;</a>
@@ -91,15 +91,16 @@
           <h3>benroc</h3>
           </div>
           <div class="para1"><p>
-            sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
-            ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
-            sssssssssssssssssssssssssssssssssssssssssssssssssss
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+            Qui, placeat fuga? Quam fugiat incidunt possimus error neque! 
+            Unde molestiae id at libero ipsum voluptatibus eum, aliquam suscipit! 
+            Consequuntur, cupiditate at?
           </p></div>
 
           <div class="para2"><p>
-            ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
-            ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
-            ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab placeat vel eos odit! 
+            Inventore perspiciatis aut quisquam deleniti fugit porro, quibusdam in et blanditiis 
+            est aspernatur asperiores doloribus tenetur accusamus?
           </p></div>
         </div>
 
