fix grille du header(accueil)

--- a/index.html
+++ b/index.html
@@ -11,28 +11,27 @@
   </head>
 
   <body>
-
-    <header>
-
-      <h1 class="titre">
-        <div class="logo">
-        <a href="index.html">Ben Roc</a>
-      </div>
-      </h1>
-
-      <nav>
-        <a href="index.html">Accueil</a>
-        <br>
-        <a href="photo.html">Photos</a>
-        <br>
-        <a href="prestations.html">Prestations</a>
-        <br>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </header>
-
+   
       <div class="container">
-      
+        <div class="headerr">
+          <header>
+              <h1 class="titre">
+                <div class="logo">
+                <a href="index.html">Ben Roc</a>
+              </div>
+              </h1>
+        
+              <nav>
+                <a href="index.html">Accueil</a>
+                <br>
+                <a href="photo.html">Photos</a>
+                <br>
+                <a href="prestations.html">Prestations</a>
+                <br>
+                <a href="contact.html">Contact</a>
+              </nav>
+            </header>
+      </div>
           <!-- Slider -->
 
           <div id="slider" onmouseout="slider.launchInterval()" onmouseover="slider.pause()">
