--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
 
         <div class="arrow">
-          <img class="rond" src="fleche.png">
+          <a href="#bas"><img class="rond" src="fleche.png"></a>
         </div>
 
         <div class="description">
@@ -112,7 +112,7 @@
               <p>Tous droits Réservé - 2019</p>
             </div>
     
-            <div class="mention">
+            <div class="mention" id="bas">
               <a href="mentionsLegales.html" target="_blank">Mentions légales</a>
             </div>
 
