--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <a href="#bas"><img class="rond" src="fleche.png"></a>
         </div>
 
-        <div class="description">
+        <div class="description" id="bas">
           <div class="titre-desc">
           <h3>benroc</h3>
           </div>
@@ -112,7 +112,7 @@
               <p>Tous droits Réservé - 2019</p>
             </div>
     
-            <div class="mention" id="bas">
+            <div class="mention">
               <a href="mentionsLegales.html" target="_blank">Mentions légales</a>
             </div>
 
