fix footer + description et supp code inutile

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 
         </div>
         
-        <div class="description" id="bas">
-          <div class="titre-desc">
-          <h3>benroc</h3>
-          </div>
+        <div class="description">
+
+          <p class="titre_desc">Description</p>
+
           <div class="para1"><p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
             Qui, placeat fuga? Quam fugiat incidunt possimus error neque! 
@@ -103,13 +103,13 @@
         <footer>
           <div class="detail">
 
+            <div class="mention">
+              <a href="mentionsLegales.html" target="_blank">Mentions légales</a>
+            </div>
+
             <div class="info">
               <p>06.99.59.75.02 - benoit.roc@gmail.com - <a href="https://www.facebook.com/benroc.photographe" target="_blank">facebook</a></p>
               <p>Tous droits Réservé - 2019</p>
-            </div>
-    
-            <div class="mention">
-              <a href="mentionsLegales.html" target="_blank">Mentions légales</a>
             </div>
 
           </div>
