Page mentions légales
Page mentions légales

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="detail">
 
             <div class="mention">
-              <a href="mentionsLegales.html" target="_blank">Mentions légales</a>
+              <a href="mentions.html" target="_blank">Mentions légales</a>
             </div>
 
             <div class="info">
