--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
             Qui, placeat fuga? Quam fugiat incidunt possimus error neque! 
             Unde molestiae id at libero ipsum voluptatibus eum, aliquam suscipit! 
-            Consequuntur, cupiditate at?
+            Consequuntur, cupiditate at?<a href="form.html">formulaire</a>
           </p></div>
 
           <div class="para2"><p>
@@ -98,6 +98,7 @@
             est aspernatur asperiores doloribus tenetur accusamus?
           </p></div>
         </div>
+      
 
 
         <footer>
