Restructuration du projet

--- a/accueil/index.html
+++ b/accueil/index.html
@@ -28,7 +28,7 @@
                 <br>
                 <a href="prestations.html">Prestations</a>
                 <br>
-                <a href="contact.html">Contact</a>
+                <a href="/formulaire/form.html">Contact</a>
               </nav>
             </header>
       </div>
@@ -36,42 +36,42 @@
 
           <div id="slider" onmouseout="slider.launchInterval()" onmouseover="slider.pause()">
 
-            <div class="slide" style="background-image: url(img/1.jpg)">
+            <div class="slide" style="background-image: url(/img/1.jpg)">
               <h2 class="slider-title">BENOIT ROCHER</h2>
               <p class="en-savoir-plus">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</p>
             </div>
 
-            <div class="slide" style="background-image: url(img/2.jpg)">
+            <div class="slide" style="background-image: url(/img/2.jpg)">
               <h2 class="slider-title">BENOIT ROCHER</h2>
               <p class="en-savoir-plus">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</p>
             </div>
 
-            <div class="slide" style="background-image: url(img/3.jpg)">
+            <div class="slide" style="background-image: url(/img/3.jpg)">
               <h2 class="slider-title">BENOIT ROCHER</h2>
               <p class="en-savoir-plus">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</p>
             </div>
 
-            <div class="slide" style="background-image: url(img/4.jpg)">
+            <div class="slide" style="background-image: url(/img/4.jpg)">
               <h2 class="slider-title">BENOIT ROCHER</h2>
               <p class="en-savoir-plus">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</p>
             </div>
 
-            <div class="slide" style="background-image: url(img/5.jpg)">
+            <div class="slide" style="background-image: url(/img/5.jpg)">
               <h2 class="slider-title">BENOIT ROCHER</h2>
               <p class="en-savoir-plus">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</p>
             </div>
 
-            <div class="slide" style="background-image: url(img/6.jpg)">
+            <div class="slide" style="background-image: url(/img/6.jpg)">
               <h2 class="slider-title">BENOIT ROCHER</h2>
               <p class="en-savoir-plus">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</p>
             </div>
 
-            <div class="slide" style="background-image: url(img/7.jpg)">
+            <div class="slide" style="background-image: url(/img/7.jpg)">
               <h2 class="slider-title">BENOIT ROCHER</h2>
               <p class="en-savoir-plus">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</p>
             </div>
 
-            <div class="slide" style="background-image: url(img/8.jpg)">
+            <div class="slide" style="background-image: url(/img/8.jpg)">
               <h2 class="slider-title">BENOIT ROCHER</h2>
               <p class="en-savoir-plus">PHOTOGRAPHE INDEPENDANT - MARIAGE - PORTRAIT - REPORTAGE - SAINT LEONARD DE NOBLAT</p>
             </div>
@@ -89,7 +89,7 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
             Qui, placeat fuga? Quam fugiat incidunt possimus error neque! 
             Unde molestiae id at libero ipsum voluptatibus eum, aliquam suscipit! 
-            Consequuntur, cupiditate at?<a href="form.html">formulaire</a>
+            Consequuntur, cupiditate at?
           </p></div>
 
           <div class="para2"><p>
@@ -105,7 +105,7 @@
           <div class="detail">
 
             <div class="mention">
-              <a href="mentions.html" target="_blank">Mentions légales</a>
+              <a href="/mentionsl/mentions.html" target="_blank">Mentions légales</a>
             </div>
 
             <div class="info">
@@ -119,8 +119,8 @@
 
       </div>
 
-      <script src="js/jquery-3.3.1.min.js"></script>
-      <script type="text/javascript" src="js/sliderpoo.js"></script>
+      <script src="/js/jquery-3.3.1.min.js"></script>
+      <script type="text/javascript" src="/js/sliderpoo.js"></script>
 
   </body>
 </html>
